--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>langfang</title>
+    <title>廊坊立体空管理系统</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./static/jquery.min.js"></script>
   </body>
 </html>
