--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>廊坊立体空管理系统</title>
+    <script src="./static/echarts.js"></script>
+    <script src="./static/china.js"></script>
   </head>
   <body>
     <div id="app"></div>
