--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>廊坊立体空管理系统</title>
-    <script src="./static/echarts.js"></script>
-    <script src="./static/china.js"></script>
+    <link rel="stylesheet" href="static/asset/css/bootstrap.css">
+    <link rel="stylesheet" href="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css">
+    <link rel="stylesheet" href="https://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.css">    
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="./static/jquery.min.js"></script>
+    <script src="./static/js/echarts.js"></script>
+    <script src="./static/js/china.js"></script>
+    <script src="./static/js/jquery.min.js"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=FovGfLyaU2eYMMQaiq8jEKIU"></script>
+    <script src="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+    <script src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl.js"></script>
   </body>
 </html>
