--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <script src="static/js/crypto_zq-min.js"></script>
     <script src="static/js/highcharts.js"></script>
     <script src="static/js/chart.js"></script>
+    <script src="static/js/crypto.js"></script>
+    <script src="static/js/JQuery.md5.js"></script>
+    <script src="static/js/public.js"></script>
+    <script src="static/js/public_css.js"></script>
   </body>
 </html>
