增加在线清单

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <div id="app"></div>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=FovGfLyaU2eYMMQaiq8jEKIU"></script>
-    <script src="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
-    <script src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl.js"></script>
+    <script src="static/js/map/SearchInfoWindow_min.js"></script>
+    <script src="static/js/map/TrafficControl.js"></script>
+    <script src="static/js/map/Heatmap_min.js"></script>
     <script src="./static/js/echarts.js"></script>
+    <script src="./static/js/china.js"></script>
     <script src="./static/js/jquery.min.js"></script>
     <script src="static/js/crypto_zq-min.js"></script>
     <script src="static/js/highcharts.js"></script>
