--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="http://api.map.baidu.com/api?v=2.0&ak=FovGfLyaU2eYMMQaiq8jEKIU"></script>
     <script src="static/js/map/SearchInfoWindow_min.js"></script>
     <script src="static/js/map/TrafficControl.js"></script>
+    <script src="static/js/map/DrawingManager_min.js"></script>
     <script src="static/js/map/Heatmap_min.js"></script>
     <script src="./static/js/echarts.js"></script>
     <script src="./static/js/china.js"></script>
