增加滚动条

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <script src="static/js/crypto_zq-min.js"></script>
     <script src="static/js/highcharts.js"></script>
     <script src="static/js/chart.js"></script>
+    <script src="static/js/swing.js"></script>
+    <script src="static/js/jQuery-Easy.js"></script>
   </body>
 </html>
