--- a/static/video/video.html
+++ b/static/video/video.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="../js/jquery.min.js"></script>
+    <style>
+        .video{
+            width: 100%;
+            height: 100%;
+        }
+        .line{
+            padding-top: 5px;
+            font-size: 12px;
+            color: #ac2925;
+        }
+    </style>
 </head>
 <body>
     <div class="video">
         <div id="ocxContainer" style="width:500px;height:300px" dblclick="changeSize()"></div>
-        <div class="line"></div>
+        <div class="line"><font>首次运行请安装视频插件后再试！</font><a href="../Download/WebCtrl_V4.2.3.exe">插件下载</a></div>
     </div>
     <script>
 
