--- a/static/video/video.html
+++ b/static/video/video.html
@@ -19,7 +19,7 @@
 <body>
     <div class="video">
         <div id="ocxContainer" style="width:500px;height:300px" dblclick="changeSize()"></div>
-        <div class="line"><font>首次运行请安装视频插件后再试！</font><a href="../Download/WebCtrl_V4.2.3.exe">插件下载</a></div>
+        <div class="line"><font>首次运行请安装视频插件后再试！</font><a href="../Download/文件描述">插件下载</a></div>
     </div>
     <script>
 
