--- a/static/video/video.html
+++ b/static/video/video.html
@@ -33,7 +33,7 @@
             }
             // 检查插件是否已经安装过
             function OnInit() {
-                document.getElementById('ocxContainer').innerHTML = '<object classid="clsid:E55C9850-D54F-4DF2-A7B4-B8C3B687BE2F" id="preview"  width="500" height="300" name="ocx" >请使用IE浏览器预览</object>';
+                document.getElementById('ocxContainer').innerHTML = '<object classid="clsid:E55C9850-D54F-4DF2-A7B4-B8C3B687BE2F" id="preview"  width="500" height="300" name="ocx" >请使用IE浏览器预览或者360浏览器兼容模式</object>';
                 var _right = "10034,10033,10032,10020,10027,10014,10001,10028,10002,10015,10005,10010,10024,10006,10011,10003,10021,10012,10022,10004,10013,10009,10029";
                 var rightcodestate = preview.SetRightCode(_right);
 
