--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!--<script src="static/js/map/TrafficControl.js"></script>-->
     <script src="static/js/map/DrawingManager_min.js"></script>
     <script src="static/js/map/Heatmap_min.js"></script>
+    <script src="static/js/map/TextIconOverlay_min.js"></script>
     <script src="static/js/map/MarkerClusterer_min.js"></script>
     <script src="./static/js/echarts.js"></script>
     <script src="./static/js/china.js"></script>
