地图样式修改

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      //MapStyle
+      const mapStyle = {style:'googlelite'};
+    </script>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=FovGfLyaU2eYMMQaiq8jEKIU"></script>
     <script src="static/js/map/SearchInfoWindow_min.js"></script>
     <script src="static/js/map/DistanceTool_min.js"></script>
