--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <link rel="stylesheet" href="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css">
     <link rel="stylesheet" href="https://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1400px)" href="static/css/likeWinter.css" />
+  	
   </head>
   <body>
     <div id="app"></div>
