--- a/static/alert/carRepair.html
+++ b/static/alert/carRepair.html
@@ -8,41 +8,39 @@
 		html,body
 		{
 			font-size: 12px;
-			font-family: "微软雅黑";
+			font-family: "MicrosoftYaHei";
 		}
+		
 		.all-wrapper
 		{
-			width: 400px;
+			width: 420px;
 			max-height: 450px;
 			margin: 0 auto;
 			background: #FFFFFF;
-			border: 1px solid #000000;
-			box-shadow: 0px 6px 20px #000000;
-			border-radius: 3px;
+			border: 1px solid rgba(0,0,0,0.2);
+			box-shadow: 1px 3px 4px rgba(0,0,0,0.18);
+			border-radius: 2px;
+			/*padding: 0 15px;*/
 		}
 		.company-name
 		{
-			width: 100%;
-			padding: 10px 0px;
-			text-align: center;
+			/*width: 100%;*/
 			color: #333333;
+			background: #EBEBEB;
+			font-size: 14PX;
+			height: 26px;
+			line-height: 26px;
+			padding-left: 10px;
+			margin: 0px 20px 10px 20px;
 		}
-		.line
-		{
-			display: block;
-			width: 20px;
-			margin: 10px 0px;
-			margin: 0 auto;
-			
-			border-bottom: 2px solid #3783F1;
-		}
+		
 		.table-wrapper
 		{
-			padding: 10px 15px 15px 15px;
+			padding: 0px 20px 20px 20px;
 		}
 		.table-up
 		{
-			table-layout: auto;
+			/*table-layout: auto;*/
 			width: 100%;
 			margin: 0 auto;
 			border: 1px solid #DDDDDD;
@@ -52,25 +50,30 @@
 		{
 			/*width: 25%;*/
 			border: 1px solid #DDDDDD;
+			height: 22px;
+			line-height: 22px;
 		}
 		.table-up td:nth-child(odd)
 		{
 			text-align: center;
 			background: #EDEDED;
 			color: #666666;
+			width: 93px;
 		}
 		.table-up td:nth-child(even)
 		{
+			width: 98px;
 			text-align: left;
 			padding-left: 10px;
 			color: #333333;
 		}
 		
+		
 	</style>
+	
 	<body>
 		<div class="all-wrapper">
 			<div class="company-name">汽修店名称</div>
-			<span class="line"></span>
 			<div class="table-wrapper">
 				<table class="table-up">
 				<tr>
@@ -113,7 +116,7 @@
 				</tr>
 				<tr>
 					<td>VOSc排放量</td>
-					<td colspan="3">434324<span style="color: #ACACAC; float: right; margin-right: 5px;">(吨/年)</span></td>
+					<td colspan="3">434324<span style="color: #666666; float: right; margin-right: 5px;">(吨/年)</span></td>
 				</tr>
 			</table>
 			</div>
