三级网格数据接入

--- a/static/alert/enterprise.html
+++ b/static/alert/enterprise.html
@@ -89,7 +89,6 @@
 		{
 			padding: 0px 20px 20px 20px;
 		}
-		
 		.msg-type2
 		{
 			border-left: 4px solid #2494f2;
@@ -351,10 +350,7 @@
 						<td>2222<span style="color: #666666; float: right; margin-right: 5px;">(吨/年)</span></td>
 					</tr>
 				</table>
-				
 			</div>
-			
-			
 			<div class="msg-type2">
 				锅炉信息1
 				<span class="arrow">
@@ -436,7 +432,7 @@
 		</div>
 	</body>
 </html>
-<script src="jquery-3.1.1.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 <script>	
 	var hide=$(".arrow-hide")
 	$.each(hide, function() {
