--- a/static/alert/Restaurant.html
+++ b/static/alert/Restaurant.html
@@ -217,7 +217,6 @@
 					<span class="arrow-hide"><img src="hide.png" alt="" /></span>
 					<span class="arrow-show"><img src="show.png" alt="" /></span>
 				</span>
-				
 			</div>
 			<div class="table-wrapper" id="hide">
 				<table class="table-up">
@@ -247,21 +246,8 @@
 		</div>
 	</body>
 </html>
-<script src="jquery-3.1.1.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 <script>
-//	$(".arrow-hide").click(function(){
-//		$("#hide").slideUp()
-//		$(".arrow-hide").hide()
-//		$(".arrow-show").show()
-//		
-//		
-//	})
-//	$(".arrow-show").click(function(){
-//		$("#hide").slideDown()
-//		$(".arrow-show").hide()
-//		$(".arrow-hide").show()
-//		
-//	})
 var hide=$(".arrow-hide")
 	$.each(hide, function() {
 		$(this).click(function(){
