--- a/static/alert/move.html
+++ b/static/alert/move.html
@@ -199,7 +199,7 @@
 		</div>
 	</body>
 </html>
-<script src="jquery-3.1.1.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 <script>
 	var hide=$(".arrow-hide")
 	$.each(hide, function() {
