聚合类优化

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css">
     <link rel="stylesheet" href="https://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1400px)" href="static/css/likeWinter.css" />
-  	
+
   </head>
   <body>
     <div id="app"></div>
@@ -27,7 +27,8 @@
     <script src="static/js/map/DrawingManager_min.js"></script>
     <script src="static/js/map/Heatmap_min.js"></script>
     <script src="static/js/map/TextIconOverlay_min.js"></script>
-    <script src="static/js/map/MarkerClusterer_min.js"></script>
+    <!--<script src="static/js/map/MarkerClusterer_min.js"></script>-->
+    <script src="static/js/map/MarkerClusterJH.js"></script>
     <script src="./static/js/echarts.min.js"></script>
     <script src="./static/js/china.js"></script>
     <script src="./static/js/jquery.min.js"></script>
